@@ -139,6 +139,12 @@ slightly more complicated than the Glade example editor application.
 a security scanner for GNOME.
 </ul>
 
+<ul>
+<li><a href="http://tpctl.sourceforge.net/configure-thinkpad.html">
+configure-thinkpad</a> - an IBM ThinkPad configuration tool.
+</ul>
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
