@@ -119,8 +119,6 @@ glade-devel-request@ximian.com</a>,
 with commands such as 'subscribe' and 'help' in the subject line or
 the message body.
 <br><br>
-<br><br>
-<br><br>
 <P>
 An archive of the old glade-devel list, up to Aug 31 2000, can be found at:
 <UL>
@@ -128,6 +126,11 @@ An archive of the old glade-devel list, up to Aug 31 2000, can be found at:
 http://rpmfind.net/tools/glade/messages/</a>
 </UL>
 <br><br>
+There is also a mailing list for the C++ code generator here:
+<UL>
+<li><a href="http://lists.gnome.org/mailman/listinfo/glademm-list">
+http://lists.gnome.org/mailman/listinfo/glademm-list</a>
+</UL>
 </td>
 </tr>
 <tr valign="bottom">
